немного правок,немного аддаптива + скелет хедера

--- a/service-logo.html
+++ b/service-logo.html
@@ -40,7 +40,7 @@
     <section class="service-about">
         <div class="container container-service-about">
             <span class="design_choice">Сделайте правильный выбор дизайна</span>
-            <div class="wrapper">
+            <div class="wrapper wrapper-service-about">
                 <div class="service">
                     <div class="wrapper-services">
                         <span class="services-items-title">Логотип</span>
