--- a/service.html
+++ b/service.html
@@ -98,7 +98,7 @@
                             <a href="#" class="services-sub__item-link">UX/IX дизайн</a>
                         </li>
                     </ul>
-                    <a href="#" class="services-list__item-link">Подробнее</a>
+                    <a href="service-2.html" class="services-list__item-link">Подробнее</a>
                 </div>
                 <div class="services-list__item">
                     <div class="wrapper-item-top">
